[gd_scene load_steps=2 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="Deck" type="Position2D" parent="."]
position = Vector2( 108.48, -145.714 )

[node name="Discard" type="Position2D" parent="."]
position = Vector2( 266.993, -142.351 )

[node name="Play1" type="Position2D" parent="."]
position = Vector2( 221.139, 89.985 )

[node name="Play2" type="Position2D" parent="."]
position = Vector2( 0, 89.985 )

[node name="Play3" type="Position2D" parent="."]
position = Vector2( -227.802, 89.985 )

[node name="Market" type="Position2D" parent="."]
position = Vector2( -226.542, -130.478 )

[node name="Ability" type="Position2D" parent="."]
position = Vector2( -246.028, -656.263 )

[node name="SetupTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="SetupTimer2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="SetupTimer" to="." method="_on_SetupTimer_timeout"]
[connection signal="timeout" from="SetupTimer2" to="." method="_on_SetupTimer2_timeout"]
